src/grammarPrueba.output
Rules useless in parser due to conflicts

    5 $@3: ε

    7 $@4: ε

    9 $@5: ε

   15 $@8: ε

  158 addresscontent: street


State 84 conflicts: 4 reduce/reduce
State 137 conflicts: 5 reduce/reduce
State 144 conflicts: 7 reduce/reduce
State 293 conflicts: 6 shift/reduce


Grammar

    0 $accept: sigma $end

    1 $@1: ε

    2 sigma: DOCTYPE $@1 article

    3 $@2: ε

    4 section: A_SECTION $@2 section info titlesec content C_SECTION

    5 $@3: ε

    6 section: A_SECTION $@3 section titlesec content C_SECTION

    7 $@4: ε

    8 section: A_SECTION $@4 section info content C_SECTION

    9 $@5: ε

   10 section: A_SECTION $@5 section content C_SECTION

   11 $@6: ε

   12 section: A_SECTION $@6 info titlesec content C_SECTION

   13 $@7: ε

   14 section: A_SECTION $@7 titlesec content C_SECTION

   15 $@8: ε

   16 section: A_SECTION $@8 info content C_SECTION

   17 $@9: ε

   18 section: A_SECTION $@9 content C_SECTION

   19 articlecontent: ε
   20               | info titledoc content section
   21               | info content section
   22               | titledoc content section

   23 $@10: ε

   24 article: A_ARTICLE $@10 articlecontent C_ARTICLE

   25 infocontent: infocontent titlesec
   26            | titlesec
   27            | infocontent author
   28            | author
   29            | infocontent date
   30            | date
   31            | infocontent copyright
   32            | copyright
   33            | infocontent abstract
   34            | abstract
   35            | infocontent address
   36            | address
   37            | infocontent mediaobject
   38            | mediaobject

   39 $@11: ε

   40 info: A_INFO $@11 infocontent C_INFO

   41 $@12: ε

   42 titledoc: A_TITLE $@12 titlecontent C_TITLE

   43 $@13: ε

   44 titlesec: A_TITLE $@13 titlecontent C_TITLE

   45 $@14: ε

   46 author: A_AUTHOR $@14 authorcontent C_AUTHOR

   47 $@15: ε

   48 author: A_AUTHOR $@15 personname C_AUTHOR

   49 $@16: ε

   50 para: A_PARA $@16 para paracontent C_PARA

   51 $@17: ε

   52 para: A_PARA $@17 paracontent C_PARA

   53 $@18: ε

   54 simpara: A_SIMPARA $@18 seclcontent C_SIMPARA

   55 $@19: ε

   56 address: A_ADDRESS $@19 addresscontent C_ADDRESS

   57 $@20: ε

   58 firstname: A_FIRSTNAME $@20 sharedcontent C_FIRSTNAME

   59 $@21: ε

   60 surname: A_SURNAME $@21 sharedcontent C_SURNAME

   61 $@22: ε

   62 email: A_EMAIL $@22 sharedcontent C_EMAIL

   63 $@23: ε

   64 postcode: A_POSTCODE $@23 sharedcontent C_POSTCODE

   65 $@24: ε

   66 street: A_STREET $@24 sharedcontent C_STREET

   67 $@25: ε

   68 city: A_CITY $@25 sharedcontent C_CITY

   69 $@26: ε

   70 state: A_STATE $@26 sharedcontent C_STATE

   71 $@27: ε

   72 phone: A_PHONE $@27 sharedcontent C_PHONE

   73 $@28: ε

   74 date: A_DATE $@28 sharedcontent C_DATE

   75 $@29: ε

   76 year: A_YEAR $@29 sharedcontent C_YEAR

   77 $@30: ε

   78 holder: A_HOLDER $@30 sharedcontent C_HOLDER

   79 $@31: ε

   80 comment: A_COMMENT $@31 seclcontent C_COMMENT

   81 seclcontent: seclcontent TEXTO
   82            | TEXTO
   83            | seclcontent emphasis
   84            | emphasis
   85            | seclcontent comment
   86            | comment
   87            | seclcontent email
   88            | email
   89            | seclcontent author
   90            | author

   91 $@32: ε

   92 emphasis: A_EMPHASIS $@32 seclcontent C_EMPHASIS

   93 $@33: ε

   94 link: A_LINK $@33 seclcontent C_LINK

   95 $@34: ε

   96 $@35: ε

   97 link: XLINK $@34 URL $@35 C_REF

   98 personname: A_PERSONNAME authorcontent C_PERSONNAME

   99 $@36: ε

  100 important: A_IMPORTANT $@36 titlesec content C_IMPORTANT

  101 $@37: ε

  102 important: A_IMPORTANT $@37 content C_IMPORTANT

  103 copyright: A_COPYRIGHT copyrightcontent C_COPYRIGHT

  104 abstract: A_ABSTRACT titlesec abstractcontent C_ABSTRACT
  105         | A_ABSTRACT abstractcontent C_ABSTRACT

  106 mediaobject: A_MEDIAOBJECT mediaobjectcontent C_MEDIAOBJECT
  107            | A_MEDIAOBJECT info mediaobjectcontent C_MEDIAOBJECT

  108 videoobject: A_VIDEOOBJECT videocontent C_VIDEOOBJECT

  109 imageobject: A_IMAGEOBJECT imagecontent C_IMAGEOBJECT

  110 itemizedlist: A_ITEMIZEDLIST listitem C_ITEMIZEDLIST

  111 listitem: A_LISTITEM content C_LISTITEM

  112 informaltable: A_INFORMALTABLE informalcontent C_INFORMALTABLE
  113              | A_TABLE informalcontent C_TABLE

  114 tgroup: A_TGROUP thead tfoot tbody C_TGROUP
  115       | A_TGROUP thead tbody C_TGROUP
  116       | A_TGROUP tfoot tbody C_TGROUP
  117       | A_TGROUP tbody C_TGROUP

  118 thead: A_THEAD variosrow C_THEAD

  119 tfoot: A_TFOOT variosrow C_TFOOT

  120 tbody: A_TBODY variosrow C_TBODY

  121 row: A_ROW rowcontent C_ROW

  122 entry: A_ENTRY entrycontent C_ENTRY

  123 entrytbl: A_ENTRYTBL thead tbody C_ENTRYTBL
  124         | A_ENTRYTBL tbody C_ENTRYTBL

  125 content: content para
  126        | para
  127        | content itemizedlist
  128        | itemizedlist
  129        | content important
  130        | important
  131        | content simpara
  132        | simpara
  133        | content address
  134        | address
  135        | content mediaobject
  136        | mediaobject
  137        | content informaltable
  138        | informaltable
  139        | content comment
  140        | comment
  141        | content abstract
  142        | abstract

  143 abstractcontent: abstractcontent para
  144                | para
  145                | abstractcontent simpara
  146                | simpara

  147 copyrightcontent: copyrightcontent year
  148                 | year
  149                 | year holders

  150 holders: holders holder
  151        | holder

  152 $@38: ε

  153 addresscontent: TEXTO $@38 addresscontent
  154               | TEXTO
  155               | addresscontent street
  156               | street
  157               | addresscontent city
  158               | street
  159               | addresscontent state
  160               | state
  161               | addresscontent phone
  162               | phone
  163               | addresscontent email
  164               | email
  165               | addresscontent postcode
  166               | postcode

  167 titlecontent: titlecontent TEXTO
  168             | TEXTO
  169             | titlecontent emphasis
  170             | emphasis
  171             | titlecontent email
  172             | email
  173             | titlecontent link
  174             | link

  175 authorcontent: authorcontent firstname
  176              | authorcontent surname
  177              | surname

  178 sharedcontent: sharedcontent TEXTO
  179              | TEXTO
  180              | sharedcontent link
  181              | link
  182              | sharedcontent emphasis
  183              | emphasis
  184              | sharedcontent comment
  185              | comment

  186 paracontent: paracontent TEXTO
  187            | TEXTO
  188            | paracontent emphasis
  189            | emphasis
  190            | paracontent link
  191            | link
  192            | paracontent email
  193            | email
  194            | paracontent author
  195            | author
  196            | paracontent comment
  197            | comment
  198            | paracontent itemizedlist
  199            | itemizedlist
  200            | paracontent important
  201            | important
  202            | paracontent address
  203            | address
  204            | paracontent mediaobject
  205            | mediaobject
  206            | paracontent informaltable
  207            | informaltable

  208 entrycontent: entrycontent TEXTO
  209             | TEXTO
  210             | entrycontent comment
  211             | comment
  212             | entrycontent itemizedlist
  213             | itemizedlist
  214             | entrycontent important
  215             | important
  216             | entrycontent mediaobject
  217             | mediaobject
  218             | entrycontent abstract
  219             | abstract
  220             | entrycontent para
  221             | para
  222             | entrycontent simpara
  223             | simpara

  224 mediaobjectcontent: videoobject mediaobject
  225                   | videoobject
  226                   | imageobject mediaobject
  227                   | imageobject

  228 $@39: ε

  229 $@40: ε

  230 videocontent: info VIDEODATA $@39 URL $@40 C_REF

  231 $@41: ε

  232 $@42: ε

  233 videocontent: VIDEODATA $@41 URL $@42 C_REF

  234 $@43: ε

  235 $@44: ε

  236 videocontent: info VIDEODATA $@43 RUTA $@44 C_REF

  237 $@45: ε

  238 $@46: ε

  239 videocontent: VIDEODATA $@45 RUTA $@46 C_REF

  240 $@47: ε

  241 $@48: ε

  242 imagecontent: info IMAGEDATA $@47 URL $@48 C_REF

  243 $@49: ε

  244 $@50: ε

  245 imagecontent: IMAGEDATA $@49 URL $@50 C_REF

  246 $@51: ε

  247 $@52: ε

  248 imagecontent: info IMAGEDATA $@51 RUTA $@52 C_REF

  249 $@53: ε

  250 $@54: ε

  251 imagecontent: IMAGEDATA $@53 RUTA $@54 C_REF

  252 informalcontent: informalcontent mediaobject
  253                | mediaobject
  254                | informalcontent tgroup
  255                | tgroup

  256 variosrow: row
  257          | variosrow row

  258 rowcontent: entry
  259           | rowcontent entry
  260           | entrytbl
  261           | rowcontent entrytbl


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TEXTO <text> (258) 81 82 153 154 167 168 178 179 186 187 208 209
    RUTA <text> (259) 236 239 248 251
    URL <text> (260) 97 230 233 242 245
    XLINK (261) 97
    VIDEODATA (262) 230 233 236 239
    IMAGEDATA (263) 242 245 248 251
    DOCTYPE (264) 2
    C_REF (265) 97 230 233 236 239 242 245 248 251
    A_ARTICLE (266) 24
    C_ARTICLE (267) 24
    A_INFO (268) 40
    C_INFO (269) 40
    A_TITLE (270) 42 44
    C_TITLE (271) 42 44
    A_ABSTRACT (272) 104 105
    C_ABSTRACT (273) 104 105
    A_PARA (274) 50 52
    C_PARA (275) 50 52
    A_AUTHOR (276) 46 48
    C_AUTHOR (277) 46 48
    A_PERSONNAME (278) 98
    C_PERSONNAME (279) 98
    A_FIRSTNAME (280) 58
    C_FIRSTNAME (281) 58
    A_SURNAME (282) 60
    C_SURNAME (283) 60
    A_DATE (284) 74
    C_DATE (285) 74
    A_SECTION (286) 4 6 8 10 12 14 16 18
    C_SECTION (287) 4 6 8 10 12 14 16 18
    A_COPYRIGHT (288) 103
    C_COPYRIGHT (289) 103
    A_ADDRESS (290) 56
    C_ADDRESS (291) 56
    A_CITY (292) 68
    C_CITY (293) 68
    A_STATE (294) 70
    C_STATE (295) 70
    A_POSTCODE (296) 64
    C_POSTCODE (297) 64
    A_STREET (298) 66
    C_STREET (299) 66
    A_EMAIL (300) 62
    C_EMAIL (301) 62
    A_PHONE (302) 72
    C_PHONE (303) 72
    A_ITEMIZEDLIST (304) 110
    C_ITEMIZEDLIST (305) 110
    A_LISTITEM (306) 111
    C_LISTITEM (307) 111
    A_EMPHASIS (308) 92
    C_EMPHASIS (309) 92
    A_HOLDER (310) 78
    C_HOLDER (311) 78
    A_SIMPARA (312) 54
    C_SIMPARA (313) 54
    A_YEAR (314) 76
    C_YEAR (315) 76
    A_COMMENT (316) 80
    C_COMMENT (317) 80
    A_IMPORTANT (318) 100 102
    C_IMPORTANT (319) 100 102
    A_LINK (320) 94
    C_LINK (321) 94
    A_MEDIAOBJECT (322) 106 107
    C_MEDIAOBJECT (323) 106 107
    A_VIDEOOBJECT (324) 108
    C_VIDEOOBJECT (325) 108
    A_IMAGEOBJECT (326) 109
    C_IMAGEOBJECT (327) 109
    A_INFORMALTABLE (328) 112
    C_INFORMALTABLE (329) 112
    A_TGROUP (330) 114 115 116 117
    C_TGROUP (331) 114 115 116 117
    A_ROW (332) 121
    C_ROW (333) 121
    A_TABLE (334) 113
    C_TABLE (335) 113
    A_THEAD (336) 118
    C_THEAD (337) 118
    A_TFOOT (338) 119
    C_TFOOT (339) 119
    A_TBODY (340) 120
    C_TBODY (341) 120
    A_ENTRYTBL (342) 123 124
    C_ENTRYTBL (343) 123 124
    A_ENTRY (344) 122
    C_ENTRY (345) 122


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    sigma (92)
        on left: 2
        on right: 0
    $@1 (93)
        on left: 1
        on right: 2
    section (94)
        on left: 4 6 8 10 12 14 16 18
        on right: 4 6 8 10 20 21 22
    $@2 (95)
        on left: 3
        on right: 4
    $@3 (96)
        on left: 5
        on right: 6
    $@4 (97)
        on left: 7
        on right: 8
    $@5 (98)
        on left: 9
        on right: 10
    $@6 (99)
        on left: 11
        on right: 12
    $@7 (100)
        on left: 13
        on right: 14
    $@8 (101)
        on left: 15
        on right: 16
    $@9 (102)
        on left: 17
        on right: 18
    articlecontent (103)
        on left: 19 20 21 22
        on right: 24
    article (104)
        on left: 24
        on right: 2
    $@10 (105)
        on left: 23
        on right: 24
    infocontent (106)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 25 27 29 31 33 35 37 40
    info (107)
        on left: 40
        on right: 4 8 12 16 20 21 107 230 236 242 248
    $@11 (108)
        on left: 39
        on right: 40
    titledoc (109)
        on left: 42
        on right: 20 22
    $@12 (110)
        on left: 41
        on right: 42
    titlesec (111)
        on left: 44
        on right: 4 6 12 14 25 26 100 104
    $@13 (112)
        on left: 43
        on right: 44
    author (113)
        on left: 46 48
        on right: 27 28 89 90 194 195
    $@14 (114)
        on left: 45
        on right: 46
    $@15 (115)
        on left: 47
        on right: 48
    para (116)
        on left: 50 52
        on right: 50 125 126 143 144 220 221
    $@16 (117)
        on left: 49
        on right: 50
    $@17 (118)
        on left: 51
        on right: 52
    simpara (119)
        on left: 54
        on right: 131 132 145 146 222 223
    $@18 (120)
        on left: 53
        on right: 54
    address (121)
        on left: 56
        on right: 35 36 133 134 202 203
    $@19 (122)
        on left: 55
        on right: 56
    firstname (123)
        on left: 58
        on right: 175
    $@20 (124)
        on left: 57
        on right: 58
    surname (125)
        on left: 60
        on right: 176 177
    $@21 (126)
        on left: 59
        on right: 60
    email (127)
        on left: 62
        on right: 87 88 163 164 171 172 192 193
    $@22 (128)
        on left: 61
        on right: 62
    postcode (129)
        on left: 64
        on right: 165 166
    $@23 (130)
        on left: 63
        on right: 64
    street (131)
        on left: 66
        on right: 155 156 158
    $@24 (132)
        on left: 65
        on right: 66
    city (133)
        on left: 68
        on right: 157
    $@25 (134)
        on left: 67
        on right: 68
    state (135)
        on left: 70
        on right: 159 160
    $@26 (136)
        on left: 69
        on right: 70
    phone (137)
        on left: 72
        on right: 161 162
    $@27 (138)
        on left: 71
        on right: 72
    date (139)
        on left: 74
        on right: 29 30
    $@28 (140)
        on left: 73
        on right: 74
    year (141)
        on left: 76
        on right: 147 148 149
    $@29 (142)
        on left: 75
        on right: 76
    holder (143)
        on left: 78
        on right: 150 151
    $@30 (144)
        on left: 77
        on right: 78
    comment (145)
        on left: 80
        on right: 85 86 139 140 184 185 196 197 210 211
    $@31 (146)
        on left: 79
        on right: 80
    seclcontent (147)
        on left: 81 82 83 84 85 86 87 88 89 90
        on right: 54 80 81 83 85 87 89 92 94
    emphasis (148)
        on left: 92
        on right: 83 84 169 170 182 183 188 189
    $@32 (149)
        on left: 91
        on right: 92
    link (150)
        on left: 94 97
        on right: 173 174 180 181 190 191
    $@33 (151)
        on left: 93
        on right: 94
    $@34 (152)
        on left: 95
        on right: 97
    $@35 (153)
        on left: 96
        on right: 97
    personname (154)
        on left: 98
        on right: 48
    important (155)
        on left: 100 102
        on right: 129 130 200 201 214 215
    $@36 (156)
        on left: 99
        on right: 100
    $@37 (157)
        on left: 101
        on right: 102
    copyright (158)
        on left: 103
        on right: 31 32
    abstract (159)
        on left: 104 105
        on right: 33 34 141 142 218 219
    mediaobject (160)
        on left: 106 107
        on right: 37 38 135 136 204 205 216 217 224 226 252 253
    videoobject (161)
        on left: 108
        on right: 224 225
    imageobject (162)
        on left: 109
        on right: 226 227
    itemizedlist (163)
        on left: 110
        on right: 127 128 198 199 212 213
    listitem (164)
        on left: 111
        on right: 110
    informaltable (165)
        on left: 112 113
        on right: 137 138 206 207
    tgroup (166)
        on left: 114 115 116 117
        on right: 254 255
    thead (167)
        on left: 118
        on right: 114 115 123
    tfoot (168)
        on left: 119
        on right: 114 116
    tbody (169)
        on left: 120
        on right: 114 115 116 117 123 124
    row (170)
        on left: 121
        on right: 256 257
    entry (171)
        on left: 122
        on right: 258 259
    entrytbl (172)
        on left: 123 124
        on right: 260 261
    content (173)
        on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
        on right: 4 6 8 10 12 14 16 18 20 21 22 100 102 111 125 127 129 131 133 135 137 139 141
    abstractcontent (174)
        on left: 143 144 145 146
        on right: 104 105 143 145
    copyrightcontent (175)
        on left: 147 148 149
        on right: 103 147
    holders (176)
        on left: 150 151
        on right: 149 150
    addresscontent (177)
        on left: 153 154 155 156 157 158 159 160 161 162 163 164 165 166
        on right: 56 153 155 157 159 161 163 165
    $@38 (178)
        on left: 152
        on right: 153
    titlecontent (179)
        on left: 167 168 169 170 171 172 173 174
        on right: 42 44 167 169 171 173
    authorcontent (180)
        on left: 175 176 177
        on right: 46 98 175 176
    sharedcontent (181)
        on left: 178 179 180 181 182 183 184 185
        on right: 58 60 62 64 66 68 70 72 74 76 78 178 180 182 184
    paracontent (182)
        on left: 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
        on right: 50 52 186 188 190 192 194 196 198 200 202 204 206
    entrycontent (183)
        on left: 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223
        on right: 122 208 210 212 214 216 218 220 222
    mediaobjectcontent (184)
        on left: 224 225 226 227
        on right: 106 107
    videocontent (185)
        on left: 230 233 236 239
        on right: 108
    $@39 (186)
        on left: 228
        on right: 230
    $@40 (187)
        on left: 229
        on right: 230
    $@41 (188)
        on left: 231
        on right: 233
    $@42 (189)
        on left: 232
        on right: 233
    $@43 (190)
        on left: 234
        on right: 236
    $@44 (191)
        on left: 235
        on right: 236
    $@45 (192)
        on left: 237
        on right: 239
    $@46 (193)
        on left: 238
        on right: 239
    imagecontent (194)
        on left: 242 245 248 251
        on right: 109
    $@47 (195)
        on left: 240
        on right: 242
    $@48 (196)
        on left: 241
        on right: 242
    $@49 (197)
        on left: 243
        on right: 245
    $@50 (198)
        on left: 244
        on right: 245
    $@51 (199)
        on left: 246
        on right: 248
    $@52 (200)
        on left: 247
        on right: 248
    $@53 (201)
        on left: 249
        on right: 251
    $@54 (202)
        on left: 250
        on right: 251
    informalcontent (203)
        on left: 252 253 254 255
        on right: 112 113 252 254
    variosrow (204)
        on left: 256 257
        on right: 118 119 120 257
    rowcontent (205)
        on left: 258 259 260 261
        on right: 121 259 261


State 0

    0 $accept: • sigma $end

    DOCTYPE  shift, and go to state 1

    sigma  go to state 2


State 1

    2 sigma: DOCTYPE • $@1 article

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


State 2

    0 $accept: sigma • $end

    $end  shift, and go to state 4


State 3

    2 sigma: DOCTYPE $@1 • article

    A_ARTICLE  shift, and go to state 5

    article  go to state 6


State 4

    0 $accept: sigma $end •

    $default  accept


State 5

   24 article: A_ARTICLE • $@10 articlecontent C_ARTICLE

    $default  reduce using rule 23 ($@10)

    $@10  go to state 7


State 6

    2 sigma: DOCTYPE $@1 article •

    $default  reduce using rule 2 (sigma)


State 7

   24 article: A_ARTICLE $@10 • articlecontent C_ARTICLE

    A_INFO   shift, and go to state 8
    A_TITLE  shift, and go to state 9

    $default  reduce using rule 19 (articlecontent)

    articlecontent  go to state 10
    info            go to state 11
    titledoc        go to state 12


State 8

   40 info: A_INFO • $@11 infocontent C_INFO

    $default  reduce using rule 39 ($@11)

    $@11  go to state 13


State 9

   42 titledoc: A_TITLE • $@12 titlecontent C_TITLE

    $default  reduce using rule 41 ($@12)

    $@12  go to state 14


State 10

   24 article: A_ARTICLE $@10 articlecontent • C_ARTICLE

    C_ARTICLE  shift, and go to state 15


State 11

   20 articlecontent: info • titledoc content section
   21               | info • content section

    A_TITLE          shift, and go to state 9
    A_ABSTRACT       shift, and go to state 16
    A_PARA           shift, and go to state 17
    A_ADDRESS        shift, and go to state 18
    A_ITEMIZEDLIST   shift, and go to state 19
    A_SIMPARA        shift, and go to state 20
    A_COMMENT        shift, and go to state 21
    A_IMPORTANT      shift, and go to state 22
    A_MEDIAOBJECT    shift, and go to state 23
    A_INFORMALTABLE  shift, and go to state 24
    A_TABLE          shift, and go to state 25

    titledoc       go to state 26
    para           go to state 27
    simpara        go to state 28
    address        go to state 29
    comment        go to state 30
    important      go to state 31
    abstract       go to state 32
    mediaobject    go to state 33
    itemizedlist   go to state 34
    informaltable  go to state 35
    content        go to state 36


State 12

   22 articlecontent: titledoc • content section

    A_ABSTRACT       shift, and go to state 16
    A_PARA           shift, and go to state 17
    A_ADDRESS        shift, and go to state 18
    A_ITEMIZEDLIST   shift, and go to state 19
    A_SIMPARA        shift, and go to state 20
    A_COMMENT        shift, and go to state 21
    A_IMPORTANT      shift, and go to state 22
    A_MEDIAOBJECT    shift, and go to state 23
    A_INFORMALTABLE  shift, and go to state 24
    A_TABLE          shift, and go to state 25

    para           go to state 27
    simpara        go to state 28
    address        go to state 29
    comment        go to state 30
    important      go to state 31
    abstract       go to state 32
    mediaobject    go to state 33
    itemizedlist   go to state 34
    informaltable  go to state 35
    content        go to state 37


State 13

   40 info: A_INFO $@11 • infocontent C_INFO

    A_TITLE        shift, and go to state 38
    A_ABSTRACT     shift, and go to state 16
    A_AUTHOR       shift, and go to state 39
    A_DATE         shift, and go to state 40
    A_COPYRIGHT    shift, and go to state 41
    A_ADDRESS      shift, and go to state 18
    A_MEDIAOBJECT  shift, and go to state 23

    infocontent  go to state 42
    titlesec     go to state 43
    author       go to state 44
    address      go to state 45
    date         go to state 46
    copyright    go to state 47
    abstract     go to state 48
    mediaobject  go to state 49


State 14

   42 titledoc: A_TITLE $@12 • titlecontent C_TITLE

    TEXTO       shift, and go to state 50
    XLINK       shift, and go to state 51
    A_EMAIL     shift, and go to state 52
    A_EMPHASIS  shift, and go to state 53
    A_LINK      shift, and go to state 54

    email         go to state 55
    emphasis      go to state 56
    link          go to state 57
    titlecontent  go to state 58


State 15

   24 article: A_ARTICLE $@10 articlecontent C_ARTICLE •

    $default  reduce using rule 24 (article)


State 16

  104 abstract: A_ABSTRACT • titlesec abstractcontent C_ABSTRACT
  105         | A_ABSTRACT • abstractcontent C_ABSTRACT

    A_TITLE    shift, and go to state 38
    A_PARA     shift, and go to state 17
    A_SIMPARA  shift, and go to state 20

    titlesec         go to state 59
    para             go to state 60
    simpara          go to state 61
    abstractcontent  go to state 62


State 17

   50 para: A_PARA • $@16 para paracontent C_PARA
   52     | A_PARA • $@17 paracontent C_PARA

    A_PARA    reduce using rule 49 ($@16)
    $default  reduce using rule 51 ($@17)

    $@16  go to state 63
    $@17  go to state 64


State 18

   56 address: A_ADDRESS • $@19 addresscontent C_ADDRESS

    $default  reduce using rule 55 ($@19)

    $@19  go to state 65


State 19

  110 itemizedlist: A_ITEMIZEDLIST • listitem C_ITEMIZEDLIST

    A_LISTITEM  shift, and go to state 66

    listitem  go to state 67


State 20

   54 simpara: A_SIMPARA • $@18 seclcontent C_SIMPARA

    $default  reduce using rule 53 ($@18)

    $@18  go to state 68


State 21

   80 comment: A_COMMENT • $@31 seclcontent C_COMMENT

    $default  reduce using rule 79 ($@31)

    $@31  go to state 69


State 22

  100 important: A_IMPORTANT • $@36 titlesec content C_IMPORTANT
  102          | A_IMPORTANT • $@37 content C_IMPORTANT

    A_TITLE   reduce using rule 99 ($@36)
    $default  reduce using rule 101 ($@37)

    $@36  go to state 70
    $@37  go to state 71


State 23

  106 mediaobject: A_MEDIAOBJECT • mediaobjectcontent C_MEDIAOBJECT
  107            | A_MEDIAOBJECT • info mediaobjectcontent C_MEDIAOBJECT

    A_INFO         shift, and go to state 8
    A_VIDEOOBJECT  shift, and go to state 72
    A_IMAGEOBJECT  shift, and go to state 73

    info                go to state 74
    videoobject         go to state 75
    imageobject         go to state 76
    mediaobjectcontent  go to state 77


State 24

  112 informaltable: A_INFORMALTABLE • informalcontent C_INFORMALTABLE

    A_MEDIAOBJECT  shift, and go to state 23
    A_TGROUP       shift, and go to state 78

    mediaobject      go to state 79
    tgroup           go to state 80
    informalcontent  go to state 81


State 25

  113 informaltable: A_TABLE • informalcontent C_TABLE

    A_MEDIAOBJECT  shift, and go to state 23
    A_TGROUP       shift, and go to state 78

    mediaobject      go to state 79
    tgroup           go to state 80
    informalcontent  go to state 82


State 26

   20 articlecontent: info titledoc • content section

    A_ABSTRACT       shift, and go to state 16
    A_PARA           shift, and go to state 17
    A_ADDRESS        shift, and go to state 18
    A_ITEMIZEDLIST   shift, and go to state 19
    A_SIMPARA        shift, and go to state 20
    A_COMMENT        shift, and go to state 21
    A_IMPORTANT      shift, and go to state 22
    A_MEDIAOBJECT    shift, and go to state 23
    A_INFORMALTABLE  shift, and go to state 24
    A_TABLE          shift, and go to state 25

    para           go to state 27
    simpara        go to state 28
    address        go to state 29
    comment        go to state 30
    important      go to state 31
    abstract       go to state 32
    mediaobject    go to state 33
    itemizedlist   go to state 34
    informaltable  go to state 35
    content        go to state 83


State 27

  126 content: para •

    $default  reduce using rule 126 (content)


State 28

  132 content: simpara •

    $default  reduce using rule 132 (content)


State 29

  134 content: address •

    $default  reduce using rule 134 (content)


State 30

  140 content: comment •

    $default  reduce using rule 140 (content)


State 31

  130 content: important •

    $default  reduce using rule 130 (content)


State 32

  142 content: abstract •

    $default  reduce using rule 142 (content)


State 33

  136 content: mediaobject •

    $default  reduce using rule 136 (content)


State 34

  128 content: itemizedlist •

    $default  reduce using rule 128 (content)


State 35

  138 content: informaltable •

    $default  reduce using rule 138 (content)


State 36

   21 articlecontent: info content • section
  125 content: content • para
  127        | content • itemizedlist
  129        | content • important
  131        | content • simpara
  133        | content • address
  135        | content • mediaobject
  137        | content • informaltable
  139        | content • comment
  141        | content • abstract

    A_ABSTRACT       shift, and go to state 16
    A_PARA           shift, and go to state 17
    A_SECTION        shift, and go to state 84
    A_ADDRESS        shift, and go to state 18
    A_ITEMIZEDLIST   shift, and go to state 19
    A_SIMPARA        shift, and go to state 20
    A_COMMENT        shift, and go to state 21
    A_IMPORTANT      shift, and go to state 22
    A_MEDIAOBJECT    shift, and go to state 23
    A_INFORMALTABLE  shift, and go to state 24
    A_TABLE          shift, and go to state 25

    section        go to state 85
    para           go to state 86
    simpara        go to state 87
    address        go to state 88
    comment        go to state 89
    important      go to state 90
    abstract       go to state 91
    mediaobject    go to state 92
    itemizedlist   go to state 93
    informaltable  go to state 94


State 37

   22 articlecontent: titledoc content • section
  125 content: content • para
  127        | content • itemizedlist
  129        | content • important
  131        | content • simpara
  133        | content • address
  135        | content • mediaobject
  137        | content • informaltable
  139        | content • comment
  141        | content • abstract

    A_ABSTRACT       shift, and go to state 16
    A_PARA           shift, and go to state 17
    A_SECTION        shift, and go to state 84
    A_ADDRESS        shift, and go to state 18
    A_ITEMIZEDLIST   shift, and go to state 19
    A_SIMPARA        shift, and go to state 20
    A_COMMENT        shift, and go to state 21
    A_IMPORTANT      shift, and go to state 22
    A_MEDIAOBJECT    shift, and go to state 23
    A_INFORMALTABLE  shift, and go to state 24
    A_TABLE          shift, and go to state 25

    section        go to state 95
    para           go to state 86
    simpara        go to state 87
    address        go to state 88
    comment        go to state 89
    important      go to state 90
    abstract       go to state 91
    mediaobject    go to state 92
    itemizedlist   go to state 93
    informaltable  go to state 94


State 38

   44 titlesec: A_TITLE • $@13 titlecontent C_TITLE

    $default  reduce using rule 43 ($@13)

    $@13  go to state 96


State 39

   46 author: A_AUTHOR • $@14 authorcontent C_AUTHOR
   48       | A_AUTHOR • $@15 personname C_AUTHOR

    A_PERSONNAME  reduce using rule 47 ($@15)
    $default      reduce using rule 45 ($@14)

    $@14  go to state 97
    $@15  go to state 98


State 40

   74 date: A_DATE • $@28 sharedcontent C_DATE

    $default  reduce using rule 73 ($@28)

    $@28  go to state 99


State 41

  103 copyright: A_COPYRIGHT • copyrightcontent C_COPYRIGHT

    A_YEAR  shift, and go to state 100

    year              go to state 101
    copyrightcontent  go to state 102


State 42

   25 infocontent: infocontent • titlesec
   27            | infocontent • author
   29            | infocontent • date
   31            | infocontent • copyright
   33            | infocontent • abstract
   35            | infocontent • address
   37            | infocontent • mediaobject
   40 info: A_INFO $@11 infocontent • C_INFO

    C_INFO         shift, and go to state 103
    A_TITLE        shift, and go to state 38
    A_ABSTRACT     shift, and go to state 16
    A_AUTHOR       shift, and go to state 39
    A_DATE         shift, and go to state 40
    A_COPYRIGHT    shift, and go to state 41
    A_ADDRESS      shift, and go to state 18
    A_MEDIAOBJECT  shift, and go to state 23

    titlesec     go to state 104
    author       go to state 105
    address      go to state 106
    date         go to state 107
    copyright    go to state 108
    abstract     go to state 109
    mediaobject  go to state 110


State 43

   26 infocontent: titlesec •

    $default  reduce using rule 26 (infocontent)


State 44

   28 infocontent: author •

    $default  reduce using rule 28 (infocontent)


State 45

   36 infocontent: address •

    $default  reduce using rule 36 (infocontent)


State 46

   30 infocontent: date •

    $default  reduce using rule 30 (infocontent)


State 47

   32 infocontent: copyright •

    $default  reduce using rule 32 (infocontent)


State 48

   34 infocontent: abstract •

    $default  reduce using rule 34 (infocontent)


State 49

   38 infocontent: mediaobject •

    $default  reduce using rule 38 (infocontent)


State 50

  168 titlecontent: TEXTO •

    $default  reduce using rule 168 (titlecontent)


State 51

   97 link: XLINK • $@34 URL $@35 C_REF

    $default  reduce using rule 95 ($@34)

    $@34  go to state 111


State 52

   62 email: A_EMAIL • $@22 sharedcontent C_EMAIL

    $default  reduce using rule 61 ($@22)

    $@22  go to state 112


State 53

   92 emphasis: A_EMPHASIS • $@32 seclcontent C_EMPHASIS

    $default  reduce using rule 91 ($@32)

    $@32  go to state 113


State 54

   94 link: A_LINK • $@33 seclcontent C_LINK

    $default  reduce using rule 93 ($@33)

    $@33  go to state 114


State 55

  172 titlecontent: email •

    $default  reduce using rule 172 (titlecontent)


State 56

  170 titlecontent: emphasis •
